--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -1,9 +1,10 @@
+appdirs==1.4.0
 asgi-redis==0.14.1
 asgiref==0.14.0
 autobahn==0.16.0
 Babel==2.3.4
 boto==2.42.0
-channels==0.17.2
+channels==0.17.3
 colorama==0.3.7
 contextlib2==0.5.4
 coverage==4.2
@@ -21,10 +22,12 @@ huey==1.2.0
 IPy==0.83
 mock==2.0.0
 msgpack-python==0.4.8
-otree-core==1.0.11
+otree-core==1.1.8
 otree-save-the-change==1.1.3
+packaging==16.8
 pbr==1.10.0
 py==1.4.31
+pyparsing==2.1.10
 pytest==2.9.2
 pytest-django==3.0.0
 python-redis-lock==3.2.0
